[package]
name = "keystellation"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["tls", "secrets"] }
rocket_dyn_templates = "0.2.0"
pulldown-cmark = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
